--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -87,8 +87,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
-    env:
-      ssm_parameter_status: /oracle/backups/${{ inputs.TargetHost }}/status
+    timeout-minutes: 1440
     steps:
 
       - name: Checkout hmpps-delius-operation-automation
@@ -123,13 +122,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # - name: SetInitialStatus
-      #   uses: stephenbawks/aws-ssm-parameter@v1.0.0
-      #   with:
-      #     name: $ssm_parameter_status
-      #     value: NotPassed
-      #     description: Put AWS Parameter Status
-
       - name: Start Ansible Backup
         run: |
           ansible-playbook operations/playbooks/oracle_backup/backup.yml \
@@ -138,5 +130,3 @@ jobs:
           -e daily_weekly="weekly" \
           -e enable_trace="no" \
           -e delete_defunct="no"
-
-#${{ github.inputs.TargetHost }}
