--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -150,7 +150,7 @@ jobs:
             -e enable_trace=${{ inputs.EnableTrace }}
 
       - name: Start Ansible Backup (Workflow Call)
-        if: ${{ github.event.issue.workflow_call }}
+        if: ${{ github.event.workflow_call }}
         run: |
            $command -i $inventory \
           -e rman_target=environment_name_delius_core_development_dev_${{ inputs.TargetHost }} \
