--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -81,7 +81,7 @@ on:
 
   push:
     branches:
-      - main
+      - DBA-511
     paths:
       - .github/workflows/oracle-backup.yml
 
@@ -132,18 +132,17 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.CICD_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-2
-          #${{ secrets.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Start Ansible Backup (Push)
-        if: ${{ github.event.push }}
+        if: github.event_name == 'push'
         run: |
           $command -i $inventory \
           -e rman_target=environment_name_delius_core_development_dev_delius_primarydb \
           -e daily_weekly="daily"
 
       - name: Start Ansible Backup (Workflow Dispatch)
-        if: ${{ github.event.workflow_dispatch }}
+        if: github.event_name == 'workflow_dispatch'
         run: |
           $command -i $inventory \
           -e rman_target=environment_name_delius_core_development_dev_${{ github.event.inputs.TargetHost }} \
@@ -151,7 +150,7 @@ jobs:
           -e enale_trace=${{  github.event.inputs.EnableTrace }}
 
       - name: Start Ansible Backup (Workflow Call)
-        if: ${{ inputs.externall_call }}
+        if: github.event.inputs.externall_call
         run: |
           $command -i $inventory \
           -e rman_target=environment_name_delius_core_development_dev_${{ github.event.inputs.TargetHost }} \
