Test workflow call

--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -62,7 +62,7 @@ on:
       SourceCodeVersion:
         description: "Source version for the  hmpps-delius-operation-automation. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
-        default: "main"
+        default: "DBA-511"
       SourceConfigVersion:
         description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
@@ -154,4 +154,4 @@ jobs:
         run: |
           $command -i $inventory \
           -e rman_target=environment_name_delius_core_development_dev_${{ github.event.inputs.TargetHost }} \
-          -e daily_weekly=${{  github.event.inputs.Period }}
+          -e daily_weekly=${{ github.event.inputs.Period }}
