--- a/.github/workflows/oracle-schedule-dev-backup.yml
+++ b/.github/workflows/oracle-schedule-dev-backup.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         database_type: [delius]
     uses: 
-      ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-backup.yml@DBA-511
+      ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-backup.yml@main
     with:
       TargetHost: ${{ matrix.database_type }}_primarydb
       Period: daily
