--- a/.github/workflows/oracle-schedule-dev-backup.yml
+++ b/.github/workflows/oracle-schedule-dev-backup.yml
@@ -1,13 +1,13 @@
 name: "Oracle: Scheduled Delius Development Database Backup"
 on:
-  # schedule:
-  #   - cron:  '30 06 * * 1,2,4,5'
-  #   - cron: '30 06 * * 3'
-  push:
-    branches:
-      - DBA-511
-    paths:
-      - .github/workflows/oracle-schedule-dev-backup.yml
+  schedule:
+    - cron:  '30 06 * * 1,2,4,5'
+    - cron: '33 11 * * 1'
+  # push:
+  #   branches:
+  #     - DBA-511
+  #   paths:
+  #     - .github/workflows/oracle-schedule-dev-backup.yml
 jobs:
   call-workflow:
     strategy:
