--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -144,7 +144,7 @@ jobs:
           -e enale_trace=${{ github.event.inputs.EnableTrace }}
 
       - name: Start Ansible Backup (Workflow Call)
-        if: github.event_name == 'workflow_call'
+        if: github.event_name == 'schedule'
         run: |
           $command -i $inventory \
           -e rman_target=environment_name_delius_core_development_dev_${{ github.event.inputs.TargetHost }} \
