--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -79,6 +79,12 @@ on:
         required: true
         type: string
 
+  push:
+    branches:
+      - DBA-511
+    paths:
+      - .github/workflows/oracle-backup.yml
+
 # Allow permissions on repository and docker image respectively 
 permissions:
   contents: read
@@ -94,8 +100,11 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
     timeout-minutes: 1440
     env:
-      command: ansible-playbook operations/playbooks/oracle_backup/backup.yml
+      backup_command: ansible-playbook operations/playbooks/oracle_backup/backup.yml
+      validate_command: ansible-playbook operations/playbooks/oracle_backup/validate.yml
+      delete_dbids_command: operations/oracle_backup/delete_dbids_not_in_use.yml
       inventory: inventory/ansible
+    continue-on-error: false
     steps:
 
       - name: Checkout hmpps-delius-operation-automation
@@ -128,17 +137,17 @@ jobs:
           aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Start Ansible Backup (Push)
-        if: github.event_name == 'push'
-        run: |
-          $command -i $inventory \
-          -e rman_target=environment_name_delius_core_development_dev_delius_primarydb \
-          -e daily_weekly="daily"
+      # - name: Start Ansible Backup (Push)
+      #   if: github.event_name == 'push'
+      #   run: |
+      #     $back_command -i $inventory \
+      #     -e rman_target=environment_name_delius_core_development_dev_delius_primarydb \
+      #     -e daily_weekly="daily"
 
       - name: Start Ansible Backup (Workflow Dispatch)
         if: github.event_name == 'workflow_dispatch'
         run: |
-          $command -i $inventory \
+          $backup_command -i $inventory \
           -e rman_target=environment_name_delius_core_development_dev_${{ github.event.inputs.TargetHost }} \
           -e daily_weekly=${{ github.event.inputs.Period }} \
           -e enale_trace=${{ github.event.inputs.EnableTrace }}
@@ -146,6 +155,18 @@ jobs:
       - name: Start Ansible Backup (Workflow Call)
         if: github.event_name == 'schedule'
         run: |
-          $command -i $inventory \
+          $backup_command -i $inventory \
           -e rman_target=environment_name_delius_core_development_dev_${{ github.event.inputs.TargetHost }} \
           -e daily_weekly=${{ github.event.inputs.Period }}
+
+      - name: Start Ansible Validate Backup (Fix Absent Chunks)
+        run: |
+          $validate_command -i $inventory \
+          -e rman_target=environment_name_delius_core_development_dev_${{ github.event.inputs.TargetHost }}
+          -e fix_absent_chunks=${{ github.event.inputs.FixAbsentChunks }}
+
+      # - name: Start Ansible Delete DBID's Not In Use
+      #   run: |
+      #     $delete_dbids_command -i $inventory \
+      #     -e rman_target=environment_name_delius_core_development_dev_${{ github.event.inputs.TargetHost }}
+      #     if: github.event.inputs.DeleteDefunct == 'yes'
