Change schedule and branch

--- a/.github/workflows/oracle-schedule-dev-backup.yml
+++ b/.github/workflows/oracle-schedule-dev-backup.yml
@@ -1,15 +1,20 @@
 name: "Oracle: Scheduled Delius Development Database Backup"
 on:
   schedule:
-    - cron: '30 06 * * 1,2,4,5'
-    - cron: '00 14 * * 1'
+    - cron: '30 09 * * 1,2,4,5'
+    - cron: '30 06 * * 1'
+  push:
+    branches:
+      - DBA-511
+    paths:
+      - .github/workflows/oracle-schedule-dev-backup.yml
 jobs:
   call-workflow:
     strategy:
       matrix:
         database_type: [delius]
     uses: 
-      ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-backup.yml@DBA-511
+      ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-backup.yml@main
     with:
       TargetHost: ${{ matrix.database_type }}_primarydb
       Period: daily
