--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -79,6 +79,12 @@ on:
         required: true
         type: string
 
+  push:
+    branches:
+      - DBA-511
+    paths:
+      - .github/workflows/oracle-backup.yml
+
 # Allow permissions on repository and docker image respectively 
 permissions:
   contents: read
@@ -98,6 +104,7 @@ jobs:
       validate_command: ansible-playbook operations/playbooks/oracle_backup/validate.yml
       delete_dbids_command: ansible-playbook operations/oracle_backup/delete_dbids_not_in_use.yml
       inventory: inventory/ansible
+      FixAbsentChunks: "${{ github.event.inputs.FixAbsentChunks == '' && 'yes' || github.event.inputs.FixAbsentChunks }}"
     continue-on-error: false
     steps:
 
@@ -131,13 +138,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # - name: Start Ansible Backup (Push)
-      #   if: github.event_name == 'push'
-      #   run: |
-      #     $back_command -i $inventory \
-      #     -e rman_target=environment_name_delius_core_development_dev_delius_primarydb \
-      #     -e daily_weekly="daily"
-
       - name: Start Ansible Backup (Workflow Dispatch)
         if: github.event_name == 'workflow_dispatch'
         run: |
@@ -153,8 +153,15 @@ jobs:
           -e rman_target=environment_name_delius_core_development_dev_${{ github.event.inputs.TargetHost }} \
           -e daily_weekly=${{ github.event.inputs.Period }}
 
-      - name: Start Ansible Validate And Fix Absent Chunks
+      # - name: Start Ansible Validate And Fix Absent Chunks
+      #   run: |
+      #     $validate_command -i $inventory \
+      #     -e rman_target=environment_name_delius_core_development_dev_${{ github.event.inputs.TargetHost }} \
+      #     -e fix_absent_chunks=$FixAbsentChunks
+
+      - name: Start Ansible Validate And Fix Absent Chunks (Push)
+        if: github.event_name == 'push'
         run: |
           $validate_command -i $inventory \
-          -e rman_target=environment_name_delius_core_development_dev_${{ github.event.inputs.TargetHost }} \
-          -e fix_absent_chunks=${{ inputs.FixAbsentChunks }}
+          -e rman_target=environment_name_delius_core_development_dev_delius_primarydb \
+          -e fix_absent_chunks=$FixAbsentChunks
