--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -104,8 +104,8 @@ jobs:
       validate_command: ansible-playbook operations/playbooks/oracle_backup/validate.yml
       delete_dbids_command: ansible-playbook operations/oracle_backup/delete_dbids_not_in_use.yml
       inventory: inventory/ansible
-      TargetHost: "${{ (github.event.inputs.TargetHost == '' &&  (inputs.TargetHost == '' && 'delius_primarydb' || inputs.TargetHost) || github.event.inputs.TargetHost) }}"
-      Period: "${{ (github.event.inputs.Period == '' &&  (inputs.Period == '' && 'daily' || inputs.Period) || github.event.inputs.Period) }}"
+      TargetHost: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetHost) || (github.event_name == 'schedule' && inputs.TargetHost) }}"
+      Period: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.Period) || (github.event_name == 'schedule' && inputs.Period) }}"
       FixAbsentChunks: "${{ github.event.inputs.FixAbsentChunks == '' && 'yes' || github.event.inputs.FixAbsentChunks }}"
       EnableTrace: "${{ github.event.inputs.EnableTrace == '' && 'no' || github.event.inputs.EnableTrace }}"
     continue-on-error: false
@@ -141,20 +141,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Start Ansible Backup (Workflow Dispatch)
-        #if: github.event_name == 'workflow_dispatch'
+      - name: Start Ansible Backup
         run: |
           $backup_command -i $inventory \
           -e rman_target=environment_name_delius_core_development_dev_$TargetHost \
           -e daily_weekly=$Period \
           -e enable_trace=$EnableTrace
-
-      # - name: Start Ansible Backup (Workflow Call)
-      #   #if: github.event_name == 'schedule'
-      #   run: |
-      #     $backup_command -i $inventory \
-      #     -e rman_target=environment_name_delius_core_development_dev_$TargetHost \
-      #     -e daily_weekly=$Period
 
       - name: Start Ansible Validate And Fix Absent Chunks
         run: |
