--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -141,12 +141,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Start Ansible Backup
-        run: |
-          $backup_command -i $inventory \
-          -e rman_target=environment_name_delius_core_development_dev_$TargetHost \
-          -e daily_weekly=$Period \
-          -e enable_trace=$EnableTrace
+      # - name: Start Ansible Backup
+      #   run: |
+      #     $backup_command -i $inventory \
+      #     -e rman_target=environment_name_delius_core_development_dev_$TargetHost \
+      #     -e daily_weekly=$Period \
+      #     -e enable_trace=$EnableTrace
 
       - name: Start Ansible Validate And Fix Absent Chunks
         run: |
